--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,11 @@
     <string name="write_a_message">Write a message…</string>
     <string name="send">Send</string>
     <string name="start_server">Start Server</string>
+    <string name="stop_server">Stop Server</string>
     <string name="messages_will_be_displayed_here">Messages will be displayed here…</string>
     <string name="one92_dot168">192.168.</string>
     <string name="connect">Connect</string>
     <string name="disconnect">Disconnect</string>
+    <string name="connecting">Connecting…</string>
+    <string name="download_full">Download full version\nfree from play store</string>
 </resources>
